# portfolio

./: .gitignore  README.md  docker-compose.yml  index.html  package.json
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  server.py
backend/include/: Engine.hpp  FEN.hpp  MoveGenerator.hpp  Position.hpp
backend/include/algorithm/: negamax.hpp  zobrist.hpp
backend/include/engine_core/: bit_board.hpp  constants.hpp  move.hpp  types.hpp
backend/include/evaluator/: evaluator.hpp
backend/include/evaluator/terms/: material_term.hpp
backend/src/: main.cpp
frontend/: .dockerignore  Dockerfile  package-lock.json  vite.config.ts
frontend/src/App/: App.css  App.tsx
frontend/src/GameElements/AI/: AIService.ts
frontend/src/GameElements/Board/: Board.css  BoardInteraction.ts
frontend/src/GameElements/Game/: Game.css  Game.tsx  GameStart.ts  GameState.ts
frontend/src/GameElements/Pieces/: Piece.tsx
frontend/src/GameElements/Square/: Square.tsx
frontend/src/GameElements/UI/ActivePiece/: ActivePiece.tsx
frontend/src/GameElements/UI/PieceResourceManager/: PieceResourceManager.ts
frontend/src/GameElements/Util/: Util.ts
src/App/: App.css  App.tsx
src/GameElements/Board/: Board.css  Board.tsx  BoardGrid.tsx
src/GameElements/Game/: GameLogic.ts  GameState.ts
src/GameElements/Pieces/: Piece.css  PieceFactory.ts
src/GameElements/Pieces/Types/Bishop/: Bishop.tsx
src/GameElements/Square/: Square.css
src/GameElements/UI/ActivePiece/: ActivePiece.css
src/Portfolio/: Portfolio.css  Portfolio.tsx
(+5 files in other folders)
